Fix layout and add Activities

--- a/app/src/main/res/layout/activity_add_edit_expense.xml
+++ b/app/src/main/res/layout/activity_add_edit_expense.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.mvvmpresentation.viewmodels.ExpenseViewModel" />
+            type="com.example.expenseapplication.viewmodels.ExpenseViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
