--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -2,7 +2,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.mvvmpresentation.viewmodels.ExpenseViewModel" />
+            type="com.example.expenseapplication.viewmodels.ExpenseViewModel" />
     </data>
     <LinearLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
